Switching warping paths to red

--- a/DTW2D.html
+++ b/DTW2D.html
@@ -213,7 +213,7 @@
             }
         }
         // Now draw the warping path
-        debugCtx.fillStyle = "blue";
+        debugCtx.fillStyle = "red";
         for (let k = 0; k < matches.length; k++) {
             let i = matches[k][0];
             let j = matches[k][1];
